--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Criar novo pagamento", "Create")
 </p>
-<table class="table table-striped">
+<table class="table">
     <tr>
         <th>
             @Html.DisplayName("Sócio")
