--- a/PortalSocios/PortalSocios/Views/Categorias/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Criar nova categoria", "Create")
 </p>
-<table class="table table-striped">
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
