--- a/PortalSocios/PortalSocios/Views/Home/Contact.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Contact.cshtml
@@ -2,8 +2,7 @@
     ViewBag.Title = "Contact";
 }
 <hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+    <h3>Contactos</h3>
 </hgroup>
 <div>
     <address>
