--- a/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
@@ -4,12 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete.</h2>
+<h2>Eliminar Role</h2>
 
-<h3>Are you sure you want to delete this Role? </h3>
-<p>Deleting this Role will remove all users from this role. It will not delete the users.</p>
 <div>
-    <h4>Role.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,13 +17,17 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
+
+    <h4>Tem a certeza de que pretende eliminar este Role?</h4>
+    <p>Todos os utilizadores ficarão desassociados ao Role. Contudo, não serão eliminados.</p>
+
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-actions no-color">            
+            @Html.ActionLink("Voltar à lista", "Index") |
+            <input type="submit" value="Sim" class="btn btn-danger" />
         </div>
     }
 </div>
