--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -26,6 +26,22 @@
                     <li>@Html.ActionLink("Parcerias", "Index", "Home")</li>
                     <li>@Html.ActionLink("Contactos", "Contact", "Home")</li>
 
+                    @if (User.IsInRole("Funcionario")) {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Socios/Index">Sócios</a></li>
+                                <li><a href="/Quotas/Index">Quotas</a></li>
+                                <li><a href="/Pagamentos/Index">Pagamentos</a></li>
+                                <li><a href="/Funcionarios/Index">Funcionários</a></li>
+                                <li><a href="/Categorias/Index">Categorias</a></li>
+                                <li><a href="/Beneficios/Index">Benefícios</a></li>
+                                <li><a href="/UsersAdmin/Index">Utilizadores</a></li>
+                                <li><a href="/RolesAdmin/Index">Roles</a></li>
+                            </ul>
+                        </li>
+                    }
+
                     @if (Request.IsAuthenticated && User.IsInRole("Admin")) {
                         <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
                         <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
