--- a/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
@@ -10,7 +10,7 @@
     @Html.ActionLink("Criar novo sócio", "Create")
 </p>
 <div style="overflow-x: auto;">
-    <table class="table table-striped">
+    <table class="table">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.NumSocio)
