Continuação da edição das Views associadas à autenticação.

--- a/PortalSocios/PortalSocios/Content/Site.css
+++ b/PortalSocios/PortalSocios/Content/Site.css
@@ -16,6 +16,10 @@ textarea {
     max-width: 280px;
 }
 
+.img-center {
+	margin: 0 auto;
+}
+
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
