--- a/PortalSocios/PortalSocios/Views/Home/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
+﻿<div class="jumbotron" style="text-align:center">
     <h1>Clube Desportivo Coxos da Bola</h1>
-    <p class="lead">Bem-vindo ao Portal dos Sócios do CDCB. Aqui pode consultar a sua conta corrente, verificar as referências multibanco para pagamento das quotas, consultar o estado de pagamento das quotas, aceder às suas faturas e recibos, atualizar os seus dados de sócio e requisitar novos cartões de associado.</p>
+    <p>Bem-vindo ao Portal dos Sócios do CDCB.</p>
 </div>
