--- a/PortalSocios/PortalSocios/Views/Account/Login.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Login.cshtml
@@ -5,29 +5,27 @@
 }
 
 <h2>Entrar</h2>
+<hr />
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
                 @Html.AntiForgeryToken()
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    <div class="col-md-12">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "E-mail" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    <div class="col-md-12">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Palavra-passe" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-3 col-md-12">
+                    <div class="col-md-12">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -35,14 +33,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-3 col-md-12">
+                    <div class="col-md-12">
                         <input type="submit" value="Entrar" class="btn btn-success" />
                     </div>
                 </div>
-                <p class="col-md-offset-3 col-md-12">
+                <p class="col-md-12">
                     @Html.ActionLink("Criar uma conta nova?", "Register")
                 </p>
-                <p class="col-md-offset-3 col-md-12">
+                <p class="col-md-12">
                     @Html.ActionLink("Esqueceu-se da sua password?", "ForgotPassword")
                 </p>
             }
