--- a/PortalSocios/PortalSocios/Views/Account/Register.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Register.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Registo</h2>
+<h2>Registar</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Crie uma conta nova.</h4>
+    <h4>Criar uma conta nova.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
