--- a/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
@@ -74,7 +74,7 @@
 
         <div class="form-actions no-color">            
             @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Delete" class="btn btn-danger" />
+            <input type="submit" value="Delete" class="btn btn-success" />
         </div>
     }
 </div>
