--- a/PortalSocios/PortalSocios/Views/Account/Login.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Login.cshtml
@@ -41,7 +41,7 @@
                     @Html.ActionLink("Criar uma conta nova?", "Register")
                 </p>
                 <p class="col-md-12">
-                    @Html.ActionLink("Esqueceu-se da sua password?", "ForgotPassword")
+                    @Html.ActionLink("Esqueceu-se da sua palavra-chave?", "ForgotPassword")
                 </p>
             }
         </section>
