--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
                     <li>@Html.ActionLink("Vantagens", "Vantagens", "Home")</li>
-                    <li>@Html.ActionLink("Quotas", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Quotas", "Quotas", "Home")</li>
 
                     @if (User.IsInRole("Funcionario")) {
                         <li class="dropdown">
