--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -8,10 +8,10 @@
             var foto;
             foto = document.getElementById("foto");
             foto.addEventListener("mouseover", function () {
-                this.src = "/Content/Images/fotolei.png";
+                this.src = "/Content/Imagens/fotolei.png";
             });
             foto.addEventListener("mouseout", function () {
-                this.src = "/Content/Images/fotorc.jpg";
+                this.src = "/Content/Imagens/fotorc.jpg";
             });
         }
     </script>
@@ -27,7 +27,7 @@
             </div>
             <div class="col-lg-12 text-center">
                 <br />
-                <img id="foto" class="img-circle img-responsive img-center" src="/Content/Images/fotorc.jpg" />
+                <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
                 <br />
                 <h3>Utilizadores</h3>
                 <p>Role: Funcionario</p>
