--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -9,67 +9,68 @@
 <p>
     @Html.ActionLink("Criar novo pagamento", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayName("Sócio")
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RefMultibanco)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Montante)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataPagam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataPrevPagam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Multa)
-        </th>
-        <th>
-            Ref. Quota
-        </th>
-        <th>
-            Funcionário
-        </th>
-        <th></th>
-    </tr>
+<div style="overflow-x: auto;">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayName("Sócio")
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RefMultibanco)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Montante)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataPagam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataPrevPagam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Multa)
+            </th>
+            <th>
+                Ref. Quota
+            </th>
+            <th>
+                Funcionário
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Socio.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RefMultibanco)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Montante)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataPagam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataPrevPagam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Multa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quota.Referencia)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Funcionario.Nome)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.PagamentoID }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.PagamentoID }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.PagamentoID })
-        </td>
-    </tr>
-}
-
-</table>
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Socio.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RefMultibanco)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Montante)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataPagam)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataPrevPagam)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Multa)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quota.Referencia)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Funcionario.Nome)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
+                </td>
+            </tr>
+        }
+    </table>
+</div>
