Adição do formulário de registo + inscrição como sócio.

--- a/PortalSocios/PortalSocios/Views/Account/Login.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Login.cshtml
@@ -1,10 +1,12 @@
 ﻿@model PortalSocios.Models.LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Entrar";
 }
 
-<h2>Entrar</h2>
+<title> Entrar | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+
+<h2>@ViewBag.Title</h2>
 <hr />
 <div class="row">
     <div class="col-md-8">
