--- a/PortalSocios/PortalSocios/Views/Home/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Index.cshtml
@@ -1,4 +1,18 @@
-﻿<div class="jumbotron" style="text-align:center">
-    <h1>Clube Desportivo Coxos da Bola</h1>
-    <p>Bem-vindo ao Portal dos Sócios do CDCB.</p>
-</div>
+﻿<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <style>
+    </style>
+    <script>
+    </script>
+</head>
+<body>
+    <div class="jumbotron" style="text-align:center">
+        <h1>Clube Desportivo Coxos da Bola</h1>
+        <p>Bem-vindo ao Portal dos Sócios do CDCB.</p>
+    </div>
+</body>
+</html>
+
