--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -65,11 +65,13 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Funcionario.Nome)
                 </td>
-                <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID }) |
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
-                </td>
+                
+                @if (User.IsInRole("Funcionario")) {
+                    <td>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
+                    </td>
+                }
             </tr>
         }
     </table>
