--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -3,14 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <link rel="icon" type="image/png" href="~/Content/Images/relvado.png" />
+    <link rel="icon" type="image/png" href="~/Content/Imagens/relvado.png" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,31 +25,30 @@
                     <li>@Html.ActionLink("Vantagens", "Vantagens", "Home")</li>
                     <li>@Html.ActionLink("Quotas", "Quotas", "Home")</li>
 
+                    @if (User.Identity.IsAuthenticated) {
+                        <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos")</li>
+                    }
+
                     @if (User.IsInRole("Funcionario")) {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Socios/Index">Sócios</a></li>
-                                <li><a href="/Quotas/Index">Quotas</a></li>
-                                <li><a href="/Pagamentos/Index">Pagamentos</a></li>
-                                <li><a href="/Funcionarios/Index">Funcionários</a></li>
-                                <li><a href="/Categorias/Index">Categorias</a></li>
-                                <li><a href="/Beneficios/Index">Benefícios</a></li>
-                                <li><a href="/UsersAdmin/Index">Utilizadores</a></li>
-                                <li><a href="/RolesAdmin/Index">Roles</a></li>
+                                <li><a href="~/Socios/Index">Sócios</a></li>
+                                <li><a href="~/Quotas/Index">Quotas</a></li>
+                                <li><a href="~/Pagamentos/Index">Pagamentos</a></li>
+                                <li><a href="~/Funcionarios/Index">Funcionários</a></li>
+                                <li><a href="~/Categorias/Index">Categorias</a></li>
+                                <li><a href="~/Beneficios/Index">Benefícios</a></li>
+                                <li><a href="~/UsersAdmin/Index">Utilizadores</a></li>
+                                <li><a href="~/RolesAdmin/Index">Roles</a></li>
                             </ul>
                         </li>
-                    }
-
-                    @if (Request.IsAuthenticated && User.IsInRole("Admin")) {
-                        <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
-                        <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
