--- a/PortalSocios/PortalSocios/Views/Home/Quotas.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Quotas.cshtml
@@ -1,8 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@model IEnumerable<PortalSocios.Models.Categorias>
+
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
+    <title> Quotas | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
+        .imagem {
+            border: 4px solid #ffffff;
+        }
     </style>
     <script>
     </script>
@@ -10,5 +16,15 @@
 <body>
     <h2>Quotas</h2>
     <hr />
+    <div class="container">
+        <div class="row">
+            @foreach (var item in Model) {
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-circle img-responsive img-center imagem" src="http://placehold.it/200x200" />
+                        <h4>@Html.DisplayFor(modelItem => item.Nome)</h4>
+                </div>
+            }
+        </div>
+    </div>
 </body>
 </html>
