--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -2,6 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
+    <title> Sobre | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <script>
         // altera a foto do autor para o logo do curso
         function alterElems() {
@@ -19,13 +20,13 @@
 <body>
     <h2>Sobre</h2>
     <hr />
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12">
                 <h2>Tecnologias da Internet II - 2016/2017</h2>
                 <h4>Aluno n.º 15233 - Rodrigo Daniel Nunes Carrão</h4>
             </div>
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12">
                 <br />
                 <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
                 <br />
