--- a/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
@@ -4,6 +4,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
+    <title> Vantagens | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
         .imagem {
             border: 4px solid #ffffff;
@@ -19,9 +20,10 @@
         <div class="row">
             @foreach (var item in Model) {
                 if (item.BeneficioID < 7) {
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <img class="img-circle img-responsive img-center imagem" src="~/Content/Imagens/vantagem@(item.BeneficioID).jpg" />
-                        <h5>@Html.DisplayFor(modelItem => item.Descricao)</h5>
+                    <div class="col-lg-2 text-center">
+                        <!--<img class="img-circle img-responsive img-center imagem" src="~/Content/Imagens/vantagem@(item.BeneficioID).jpg" />-->
+                        <img class="img-circle img-responsive img-center imagem" src="http://placehold.it/200x200" />                        
+                        <h4>@Html.DisplayFor(modelItem => item.Descricao)</h4>
                     </div>
                 }
             }
