--- a/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
@@ -19,16 +19,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control", @min = "1", @max = "999999999" } })
+                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.Referencia, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Montante, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                @Html.ValidationMessageFor(model => model.Montante, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
+                @Html.ValidationMessageFor(model => model.AuxMontante, "", new { @class = "text-danger" })
             </div>
         </div>
 
