Correção nos formulários para introdução de dados por parte dos utilizadores + Adição de página de erro + Alteração do CSS.

--- a/PortalSocios/PortalSocios/Views/Categorias/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Index.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.NumQuotasAnuais)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ValorMensal)
+            @Html.DisplayFor(modelItem => item.ValorMensal) €
         </td>
         <td>
             @Html.ActionLink("Editar", "Edit", new { id=item.CategoriaID }) |
