--- a/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.Referencia)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Montante)
+            @Html.DisplayFor(modelItem => item.Montante) €
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ano)
