--- a/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
@@ -28,6 +28,7 @@
     </dl>
 
     <h4>Tem a certeza de que pretende eliminar este benefício?</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
