--- a/PortalSocios/PortalSocios/Views/Categorias/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Create.cshtml
@@ -39,10 +39,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ValorMensal, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AuxValorMensal, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorMensal, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                @Html.ValidationMessageFor(model => model.ValorMensal, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AuxValorMensal, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
+                @Html.ValidationMessageFor(model => model.AuxValorMensal, "", new { @class = "text-danger" })
             </div>
         </div>
 
