--- a/PortalSocios/PortalSocios/Views/Categorias/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Delete.cshtml
@@ -44,6 +44,7 @@
     </dl>
 
     <h4>Tem a certeza de que pretende eliminar esta categoria?</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
