--- a/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
@@ -68,6 +68,7 @@
     </dl>
 
     <h4>Tem a certeza de que pretende eliminar este funcionário?</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
