--- a/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
@@ -97,7 +97,7 @@
         @Html.ActionLink("Voltar à lista", "Index")
     </div>
     <script type="text/javascript">
-        $('#DataNasc').datepicker({
+        $('#DataEntrClube').datepicker({
             format: "yyyy/mm/dd",
             endDate: "0d",
             startView: 2,
