--- a/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
@@ -77,6 +77,7 @@
     </dl>
 
     <h4>Tem a certeza de que pretende eliminar este pagamento?</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
