--- a/PortalSocios/PortalSocios/Views/Pagamentos/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Edit.cshtml
@@ -46,10 +46,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Montante, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                    @Html.ValidationMessageFor(model => model.Montante, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10", @Value = Model.Montante.ToString() } })
+                    @Html.ValidationMessageFor(model => model.AuxMontante, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -70,10 +70,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Multa, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.AuxMulta, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Multa, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                    @Html.ValidationMessageFor(model => model.Multa, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.AuxMulta, new { htmlAttributes = new { @class = "form-control", @maxlength = "10", @Value = Model.Multa.ToString() } })
+                    @Html.ValidationMessageFor(model => model.AuxMulta, "", new { @class = "text-danger" })
                 </div>
             </div>
 
