--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -52,8 +52,8 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer style="text-align:center;">
-            <p>Clube Desportivo Coxos da Bola &copy; @DateTime.Now.Year</p>
+        <footer>
+            <p>Clube Desportivo Coxos da Bola &copy; @DateTime.Now.Year - Todos os direitos reservados</p>
         </footer>
     </div>
 
