--- a/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
@@ -1,9 +1,5 @@
 ﻿@model PortalSocios.Models.Socios
 
-@{
-    ViewBag.Title = "Delete";
-}
-
 <h3>Eliminar Sócio</h3>
 
 <div>
@@ -98,7 +94,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Categoria.Nome)
+            Categoria
         </dt>
 
         <dd>
@@ -108,6 +104,7 @@
     </dl>
     
     <h4>Tem a certeza de que pretende eliminar este sócio?</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
