--- a/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
@@ -28,6 +28,7 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.SocioID)
+            @Html.HiddenFor(model => model.NumSocio)
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -101,6 +102,8 @@
                 </div>
             </div>
 
+            @Html.HiddenFor(model => model.DataInscr)
+
             <div class="form-group">
                 @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -108,6 +111,8 @@
                     @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            @Html.HiddenFor(model => model.UserName)
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
